--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Welcome to A.R.Engineering</h1>
-    <p><a href="login.html">Login</a></p>
-    <p><a href="register.html">Register</a></p>
+    <a href="{{ url_for('login') }}">Login</a><br>
+    <a href="{{ url_for('register') }}">Register</a>
+
 </body>
 </html>
