--- a/templates/login.html
+++ b/templates/login.html
@@ -73,7 +73,7 @@
             <button type="submit">Login</button>
         </form>
         <div class="toggle">
-            <a href="register.html">Don't have an account? Register</a>
+            <a href="{{ url_for('register') }}">Don't have an account? Register</a>
         </div>
     </div>
 
